[package]
name = "oxideav-vulkan-video"
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-vulkan-video"
homepage = "https://github.com/OxideAV/oxideav-vulkan-video"
authors = ["Mark Karpeles"]
description = "Vulkan Video hardware decode/encode bridge for the oxideav framework (Linux + Windows) — runtime-loaded via libloading, no compile-time Vulkan SDK dep"
readme = "README.md"
keywords = ["vulkan", "vulkan-video", "hardware", "video", "oxideav"]
categories = ["multimedia::encoding", "multimedia::video", "hardware-support"]

[dependencies]
# `oxideav-core` is gated behind the default-on `registry` feature so
# tooling consumers can depend on `oxideav-vulkan-video` with
# `default-features = false` and avoid the framework dependency tree.
oxideav-core = { version = "0.1", optional = true }

# Vulkan ships on Linux (libvulkan.so.1) and Windows (vulkan-1.dll),
# so libloading is pulled on both. macOS uses MoltenVK with a
# different loading story; the entire crate body is gated to
# `cfg(any(target_os = "linux", target_os = "windows"))` and compiles
# to an empty rlib elsewhere.
[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
libloading = "0.8"
# Shared H.264 / HEVC / AV1 minimal parser used to extract SPS / PPS /
# slice-header fields before populating `StdVideoH264*` structs for the
# Vulkan video session parameters. The bitstream crate has no target
# gate of its own (pure Rust, no FFI), so adding it under the
# linux/windows gate lines up with the rest of the crate body.
oxideav-bitstream = { version = "0.0" }
# Distributed-slice auto-registration into `oxideav_core::REGISTRARS`
# via the `oxideav_core::register!` macro. Same target gate as the
# rest of the crate body. Optional + gated behind `registry` so
# default-features=false consumers don't pull it in.
linkme = { version = "0.3", optional = true }

[features]
default = ["registry"]

# Wires up the codec/encoder/decoder trait implementations against
# `oxideav-core` so the crate can plug into the `oxideav` framework
# registry. Default-on; turn off for tooling that just wants the raw
# Vulkan Video bridge bindings without the framework.
registry = ["dep:oxideav-core", "dep:linkme"]

# Helper binary used by the Round 4 integration test to attempt the
# full H.264 decode pipeline in a fork-isolated subprocess (so a
# driver-side SIGSEGV during `vkQueueSubmit` doesn't bring down the
# parent test runner). Built only when the `registry` feature is
# enabled (which pulls `oxideav-core`).
[[bin]]
name = "round4_decode_helper"
path = "tests/bin/round4_decode_helper.rs"
required-features = ["registry"]
